opam-version: "1.2"
name: "amf"
version: "0.1.0"
maintainer: "Brian Caine <brian.d.caine@gmail.com>"
authors: "Brian Caine <brian.d.caine@gmail.com>"
dev-repo: "https://github.com/briancaine/ocaml-amf.git"
homepage: "https://briancaine.github.io/ocaml-amf/"
bug-reports: "https://github.com/briancaine/ocaml-amf/issues"
license: "LGPL with OCaml linking exception"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  [make "test"]
]
remove: ["ocamlfind" "remove" "amf"]
depends: [
  "jbuilder"                {build & >= "1.0+beta12"}

  "ppx_deriving" {build}
  "ppx_sexp_conv" {build}
  "base-threads"
  ("core" {>= "v0.9.1"})
  "stdint"
  "sexplib"
  "bisect_ppx" {build}
  "ounit" {build}
]
available: [ ocaml-version >= "4.01" ]
